# memebot

./: .env.example  .gitignore  README.md  convert_cookies.py  coverage.xml  project-structure.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  watchlist.py
.github/workflows/: ci.yml
memebot/: __init__.py  chains.py  config.py  main.py  server.py  types.py
memebot/backtest/: runner.py
memebot/config/: __init__.py  settings.py  watchlist.py
memebot/exec/: paper.py  pnl.py  positions.py  sim.py
scripts/: update_env.sh  verify_all.sh
tests/: conftest.py  test_backtest.py  test_backtest_runner.py  test_chains.py  test_config_networks.py  test_config_watchlist.py  test_discord_ingest.py  test_entry_sizing_and_limits.py  test_exec_paper.py  test_exec_pnl.py  test_exec_positions.py  test_exec_sim.py  test_exit_loop.py  test_exits.py  test_fusion.py  test_ingest_helius_webhook.py  test_ingest_mock.py  test_ingest_social_discord_ingest.py  test_ingest_social_stream_social.py  test_ingest_social_telegram_ingest.py  test_ingest_social_twitter_ingest.py  test_ingest_stream_helius.py  test_integration_eth_bsc_quote.py  test_integration_solana_jupiter.py  test_main.py  test_onchain_eth.py  test_onchain_uniswap_v2.py  test_paper_trade.py  test_pnl_report_unit.py  test_positions_tick_unit.py  test_risk_can_enter_unit.py  test_server.py  test_solana_jupiter.py  test_solana_jupiter_unit.py  test_solana_live_swap_unit.py  test_solana_trade.py  test_strategy_entry.py  test_strategy_exits.py  test_strategy_fusion.py  test_strategy_risk.py  (+11 more)
(+22 files in other folders)
