
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memebot"
version = "0.0.2"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.0",
    "web3>=6.20.0",
    "snscrape>=0.7.0",
    "telethon>=1.33.1",
    "discord.py>=2.4.0",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "redis>=5.0.8",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.2"
]

[tool.setuptools]
packages = ["memebot"]
